# git_exp

./: .gitignore  Pascal's triangle().py  fj  is ticket happy().py
deleteme/: NEW.md  empty.txt  newempty.md  newempty2.md
my_python_prog/: deleteme.txt
poetrydir/poetry1/: pyproject.toml
poetrydir/poetry1/poetry1/scripts/: hello.py
