[tool.poetry]
name = "poetry1"
version = "0.1.0"
description = ""
authors = ["OLVOS <anhkrem@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"

[tool.poetry.scripts]
say-hello = "poetry1.scripts.hello:main"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
